@@ -100,7 +100,7 @@ sub test_ja {
 ;1;
 # ----------------------------------------------------------------
 __END__
-a               ascii
+a               a
 hi              ひ
 ka              カ
 kan             漢
